# app-framework

./: .gitignore  .pre-commit-config.yaml  .prettierignore  CLAUDE.md  eslint.config.mjs  package-lock.json  package.json  playwright.config.ts  prettier.config.mjs  pyproject.toml  tsconfig.base.json  verify.sh
.github/workflows/: ci.yml
docs/: event-bus.md
docs/presentation/: index.html
docs/superpowers/plans/: 2026-04-16-widget-registry.md  2026-04-20-application-shell.md  2026-04-22-widget-registry-phase2.md  2026-04-27-json-layout-persistence.md  2026-04-28-parameter-controller.md  2026-04-29-chart-plot.md  2026-06-02-ai-layout-generation.md  2026-06-02-data-table.md  2026-06-04-status-indicator.md  2026-06-16-reachy-mini-example.md  2026-06-30-choreography-flow-widget.md  ai-layout-generation.md
e2e/: app.spec.ts
example/: app.py  pyproject.toml
examples/backend/: .env.example  README.md  __init__.py  consumers.py  main.py  producers.py  pyproject.toml
examples/frontend/: index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
examples/frontend/src/: main.tsx  shell.css  useSimulation.test.ts  useSimulation.ts
examples/reachy_mini/: README.md
examples/reachy_mini/backend/: consumers.py  main.py  producers.py  pyproject.toml  sim.py
examples/reachy_mini/frontend/: index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
examples/reachy_mini/frontend/src/: ChoreographyFlowWidget.css  ChoreographyFlowWidget.test.tsx  ChoreographyFlowWidget.tsx  ConnectionStatusWidget.tsx  RobotViewWidget.tsx  RunControlsWidget.test.tsx  RunControlsWidget.tsx  SafetyStatusWidget.test.tsx  SafetyStatusWidget.tsx  choreography.test.ts  choreography.ts  main.tsx  shell.css  useReachy.test.tsx  useReachy.ts
examples/reachy_mini/tests/: conftest.py  test_consumers.py  test_producers.py
pypackages/framework-core/: pyproject.toml
pypackages/framework-core/src/framework_core/: __init__.py  ai_layout.py  bus.py  default_widgets.py  shell_layout_schema.json  widget_registry.py  ws_bridge.py
pypackages/framework-core/tests/: test_ai_endpoints.py  test_ai_layout.py  test_event_bus.py  test_health.py  test_widget_registry.py  test_ws_bridge.py
